--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <p>how cool, i can modify the text in here</p>
     <button>click here</button>
   </body>
 </html>
